--- a/gb/18/9/1/n10683721.md
+++ b/gb/18/9/1/n10683721.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/onzhi266/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/onzhi266/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/onzhi266/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/onzhi266/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>赞“三退”伟大 王清营调查中共何时倒台</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2018/03/19a51481159f26ef46628657473162a7-600x400.jpg" />
 <h6>中国“三退”人数冲破三亿人。图为多伦多大游行，庆祝三亿人退出中共党、团、队组织。（艾文／大纪元）
 </h6>
 <hr>
-<p>【大纪元2018年09月01日讯】（大纪元记者萧律生采访报导）近期，抵达美国不久的大陆维权人士<ahref="https://github.com/onzhi266/djy/blob/master/gb/tag/%E7%8E%8B%E6%B8%85%E8%90%A5.md#1">王清营</a>发起——“你认为中国共产党倒台还要多少年？”的调查。他非常赞赏法轮功学员推出的“<ahref="https://github.com/onzhi266/djy/blob/master/gb/tag/%E4%B8%89%E9%80%80.md#1">三退</a>”行动，他在向法轮功学员学习和致敬。</p>
+	<p>【大纪元2018年09月01日讯】（大纪元记者萧律生采访报导）近期，抵达美国不久的大陆维权人士<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%8E%8B%E6%B8%85%E8%90%A5.md#1">王清营</a>发起——“你认为中国共产党倒台还要多少年？”的调查。他非常赞赏法轮功学员推出的“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B8%89%E9%80%80.md#1">三退</a>”行动，他在向法轮功学员学习和致敬。</p>
 <h2>民心思变 渴望结束中共统治</h2>
-<p>8月25日，刚来美国一个多月的河南维权人士<ahref="https://github.com/onzhi266/djy/blob/master/gb/tag/%E7%8E%8B%E6%B8%85%E8%90%A5.md#1">王清营</a>，在自己的推特上发起上述调查，为民众提供了四个选项：5年，10年，20年，200年。该调查持续了一周时间。</p>
+<p>8月25日，刚来美国一个多月的河南维权人士<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%8E%8B%E6%B8%85%E8%90%A5.md#1">王清营</a>，在自己的推特上发起上述调查，为民众提供了四个选项：5年，10年，20年，200年。该调查持续了一周时间。</p>
 <p>据悉，此调查活动刚刚结束，约有近千人参与投票。53%的民众投票5年，14%的民众投票10年，20年的选项有14%的支持率，200年的选项有19%支持率。</p>
 <p>有不少民众在此推文下面留言，希望中共当天就倒台，希望王清营能加上“1年”的选项，还说“给一个1年的，90%支持率”。</p>
 </p>
@@ -16,63 +16,60 @@
 <p dir="ltr" lang="zh">你认为中国共产党倒台还要多少年？</p>
 <p>— 王清营 (@wangPeterstone) <ahref="https://twitter.com/wangPeterstone/status/1033373782008848384?ref_src=twsrc%5Etfw">2018年8月25日</a></p></blockquote>
 <p><a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a>
-<p>王清营对大纪元记者说，民众希望当下或者一年后<ahref="https://github.com/onzhi266/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E5%80%92%E5%8F%B0.md#1">中共倒台</a>，看出他们对中共政权的恶感及思变的心态。</p>
+<p>王清营对大纪元记者说，民众希望当下或者一年后<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E5%80%92%E5%8F%B0.md#1">中共倒台</a>，看出他们对中共政权的恶感及思变的心态。</p>
 <p>王清营想要通过这个活动，了解目前中国人对共产党倒台的看法。“其实也是为解开我自己的困惑——共产党到底何时能倒台？”找一个参考座标；同时希望引起那些对结束中共统治不感兴趣人们的关注，让他们去逐渐思考这个问题；让关心这个话题的人能够再朝前走一步——每个人如何做，才能把共产党推翻，而不是等待。</p>
 <p>“我自己怎么做，我怎么把共产党推翻。如果大多数中国人都这样想，共产党也就倒台了。”王清营表示，他做这个调查的目的，是希望那些觉得“共产党还没有侵犯到我，或者侵犯到我，我还要再忍一忍”的国人能认清中共迫害中国老百姓的现实；让思想上明白中共不好，但是又胆怯的人们能放下恐惧有所行动；让已经在行动的人们，找到更加合适的反共方式结束中共的统治。</p>
 <p>“如果不怕坐牢、不怕死的人占很大比重，共产党就灭亡了。”王清营说，“越来越多的人敢于发声，敢于行动，行动后也很勇敢的，这样的基数越来越大，到一定比重的时候就能成功。”</p>
-<h2>“<ahref="https://github.com/onzhi266/djy/blob/master/gb/tag/%E4%B8%89%E9%80%80.md#1">三退</a>是伟大的行动”</h2>
+<h2>“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B8%89%E9%80%80.md#1">三退</a>是伟大的行动”</h2>
 <p>王清营对大纪元表示，他发起这个调查是受到法轮功学员劝中国人“三退”（退出中共党、团、队）的启发。他在向法轮功学员学习、模仿。</p>
 <p>王清营说，“向广大法轮功朋友问好！他们受的苦非常多，可以说是，这几十年来没有比他们受苦更多的，没有更加严重的。可是他们是最勇敢的群体，反抗力度最大，做的贡献最大，向他们致敬。”</p>
 <p>王清营表示，法轮功学员推动的“三退”声势非常大，是“最成功的行动，非常伟大的行动”。这让很多中国人明白了中共的邪恶，不仅从思想上转变，而且直接是质的飞跃——变成行动，“退党就是行动”。</p>
 <p>截至美东时间9月1日下午3点，据大纪元网上站的统计，已经有313,723,797中国人选择退出中共党、团、队。</p>
-<figure id="attachment_10243310" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2018/03/1007010626461366.jpg"><img class="size-large wp-image-10243310" src="https://i.epochtimes.com/assets/uploads/2018/03/1007010626461366-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">2018年3月23日，大纪元退党网站的三退人数突破三亿。（明慧网）</figcaption></figure>
+<figure id="attachment_10243310" aria-describedby="caption-attachment-10243310" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/03/1007010626461366.jpg"><img class="size-large wp-image-10243310" src="https://i.epochtimes.com/assets/uploads/2018/03/1007010626461366-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-10243310" class="wp-caption-text">2018年3月23日，大纪元退党网站的三退人数突破三亿。（明慧网）</figcaption></figure>
 <p>“所有的这些反抗中共的群体，很少做的超过法轮功（学员）的。他们是一个巨大的、非常成功的群体，让共产党闻风丧胆。”</p>
 <p>王清营进一步说：“法轮功在国内受到迫害是最严重的，行动群体是最大的、最有声势的，对共产党威胁是最大的，没有一个群体超过法轮功。无论是效果，还是群体，还是对共产党的打击等方面，没有一个群体比得上。”</p>
 <p>王清营表示以实际行动支持法轮功学员的“三退”运动，他说，“如果我遇到朋友，一定会问朋友是否‘三退’了。”#</p>
 <p>责任编辑：林妍</p>
-
+	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/18/8/1/n10605927.md#1">甘楠：八一香港</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/18/7/31/n10603083.md#1">程晓容：中共体制催生毒药 退党自救乃上策</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/18/7/30/n10600628.md#1">旺角行人区最后一夜 数千港人见证历史一刻</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/18/7/28/n10598100.md#1">曾铮：美国国会议员跟我学“退党”</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/18/7/26/n10592891.md#1">何坚：逃逃逃 逃离中国与逃离中共</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/16/11/22/n8518166.md#1">两亿人“三退”全球有奖征文大赛揭晓</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/16/11/16/n8499874.md#1">马来西亚声援三退勇士 为自己铺就了光明大道</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/16/10/1/n8356939.md#1">香港国殇日游行反迫害 陆客被震撼表三退</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/10/1/n8356939.md#1">香港国殇日游行反迫害 陆客被震撼表三退</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/11/16/n8499874.md#1">马来西亚声援三退勇士 为自己铺就了光明大道</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/11/22/n8518166.md#1">两亿人“三退”全球有奖征文大赛揭晓</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/7/26/n10592891.md#1">何坚：逃逃逃 逃离中国与逃离中共</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/18/8/30/n10679097.md#1">四川医生对天发誓退党 华人出国“三退”热</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/17/n10645382.md#1" target="_blank">严家伟：杀人越货丧尽天良的“土改”</a></li><li><a href="https://github.com/onzhi266/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/22/n11273123.md#1" target="_blank">汶川地震山崩地裂的那一刻</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/27/n10812825.md#1" target="_blank">潜伏在中华民国和台湾的中共间谍（4）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/5/5/n9108791.md#1" target="_blank">永远的传奇—从长春到世界（上）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/16/n11943195.md#1">日媒体人评台湾防疫2大功臣 第一名竟非陈时中</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11945722.md#1">【翻墙必看】官媒反常 批赵立坚“下作”？</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11946346.md#1">【现场视频】听信中共谎言 返京人挤爆机场</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11947698.md#1">华人纷纷回国？律师披露红二代不回国内幕</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/18/n11877949.md#1">古今中外预言中的2020年</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/29/n11905232.md#1">蝗虫群攻官府异象 为何吃尽画像人头？</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/28/n11903572.md#1">末代国君的风范 顺从天意的元惠宗</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/16/n11945291.md#1">蓬佩奥与杨洁篪通话 正告北京勿散怪诞谣言</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11948100.md#1">【现场视频】富士康上千工人维权 遭警驱赶</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11947234.md#1">【直播回放】3.17新肺炎追踪：中美外交战</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11947678.md#1">【现场视频】武汉江岸区又有人跳楼</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613669.md#1">【马克时空】乌获欧盟战机 全面制裁砸晕俄罗斯</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/onzhi266/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/onzhi266/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/9/1/n10683721.htm">赞“三退”伟大 王清营调查中共何时倒台</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/9/1/n10683721.htm">赞“三退”伟大 王清营调查中共何时倒台</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/onzhi266/djy/blob/master/gb/18/9/1/n10683721.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/onzhi266/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/onzhi266/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/onzhi266/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/18/9/1/n10683721.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
